# prism

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE-APACHE2  LICENSE-GPL3  Makefile  NOTICE  README.md  RELEASE.md  launch-notes.md
cli/: Cargo.toml  build.rs
cli/src/: cli.rs  command.rs  lib.rs
client/consensus/: Cargo.toml
client/db/: Cargo.toml
client/mapping-sync/: Cargo.toml
client/mapping-sync/src/: lib.rs  worker.rs
client/rpc/: Cargo.toml
client/rpc-core/: Cargo.toml
client/rpc-core/src/: eth.rs  eth_pubsub.rs  lib.rs  net.rs  web3.rs
client/rpc-core/src/types/: account_info.rs  block.rs  block_number.rs  bytes.rs  filter.rs  index.rs  log.rs  mod.rs  pubsub.rs  receipt.rs  sync.rs  transaction.rs  work.rs
client/rpc-core/txpool/: Cargo.toml
client/rpc-core/txpool/src/: lib.rs
client/rpc-core/txpool/src/types/: content.rs  inspect.rs  mod.rs
docker/: ombre-alphanet.Dockerfile  ombre-standalone.Dockerfile  polkadot-relay.Dockerfile
docker/dev/: Dockerfile  build.sh  run.sh
ecosystem-modules/template/: README.md
frame/dynamic-fee/: Cargo.toml
frame/dynamic-fee/src/: lib.rs
frame/ethereum/: Cargo.toml
frame/evm/: Cargo.toml
frame/evm/precompile/ed25519/: Cargo.toml
frame/evm/precompile/ed25519/src/: lib.rs
frame/evm/precompile/sha3fips/: Cargo.toml
frame/evm/precompile/sha3fips/src/: lib.rs
frame/evm/precompile/simple/: Cargo.toml
frame/evm/precompile/simple/src/: lib.rs
githooks/: pre-commit
inspect/: Cargo.toml
inspect/src/: cli.rs  command.rs  lib.rs
modules/accounts/: Cargo.toml
modules/auction_manager/: Cargo.toml
modules/cdp_engine/: Cargo.toml
modules/cdp_treasury/: Cargo.toml
modules/debt_engine/: Cargo.toml
modules/debt_treasury/: Cargo.toml
modules/emergency_shutdown/: Cargo.toml
modules/exchange/: Cargo.toml
modules/homa/: Cargo.toml
modules/incentives/: Cargo.toml
modules/ingester/: Cargo.toml
modules/lend/: Cargo.toml
modules/loans/: Cargo.toml
modules/mintx/: Cargo.toml
modules/mintx/benchmarking/: Cargo.toml
modules/mintx/benchmarking/src/: lib.rs  mock.rs
modules/mintx/src/: default_weight.rs  lib.rs  mock.rs  tests.rs
modules/mintx_engine/: Cargo.toml
modules/nft/: Cargo.toml
modules/nominees_election/: Cargo.toml
modules/polkadot_bridge/: Cargo.toml
modules/prices/: Cargo.toml
modules/stake_earning/: Cargo.toml
modules/staking_pool/: Cargo.toml
modules/support/: Cargo.toml
modules/template/: Cargo.toml
node/: Cargo.toml
node/parachain/: Cargo.toml  build.rs
node/parachain/src/: chain_spec.rs  cli.rs  command.rs  main.rs  service.rs
node/rpc/: Cargo.toml
node/rpc/src/: lib.rs
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
node/standalone/: Cargo.toml  build.rs
node/standalone/src/: chain_spec.rs  cli.rs  command.rs  main.rs  mock_timestamp.rs  service.rs
orml/auction/: Cargo.toml
orml/authority/: Cargo.toml
orml/githooks/: pre-commit
orml/nft/: Cargo.toml
orml/rewards/: Cargo.toml
orml/scripts/: run.sh  unleash-check.sh
pallets/author-inherent/: Cargo.toml
pallets/ethereum-chain-id/: Cargo.toml
pallets/stake/: Cargo.toml
pallets/template/: Cargo.toml
primitives/: Cargo.toml
primitives/consensus/: Cargo.toml
primitives/consensus/src/: lib.rs
primitives/evm/: Cargo.toml
primitives/evm/src/: lib.rs  precompile.rs
primitives/rpc/: Cargo.toml
primitives/rpc/src/: lib.rs
primitives/rpc/txpool/: Cargo.toml
primitives/rpc/txpool/src/: lib.rs
primitives/src/: lib.rs
primitives/storage/: Cargo.toml
primitives/storage/src/: lib.rs
rpc/: Cargo.toml
rpc/primitives/: Cargo.toml
rpc/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/account/: Cargo.toml
runtime/account/src/: lib.rs
runtime/common/: Cargo.toml
runtime/common/src/: lib.rs
runtime/precompiles/: Cargo.toml
runtime/precompiles/src/: lib.rs
runtime/shadows/: Cargo.toml
runtime/shadows/src/: authority.rs  constants.rs  lib.rs
runtime/shadows/src/benchmarking/: accounts.rs  auction.rs  auction_manager.rs  authority.rs  cdp_engine.rs  cdp_treasury.rs  currencies.rs  debt_engine.rs  debt_treasury.rs  emergency_shutdown.rs  gradually_update.rs  honzon.rs  incentives.rs  ingester.rs  mintx.rs  mod.rs  oracle.rs  prices.rs  rewards.rs  tokens.rs  utils.rs  vesting.rs
runtime/shadows/src/weights/: accounts.rs  auction_manager.rs  cdp_engine.rs  cdp_treasury.rs  debt_engine.rs  debt_treasury.rs  dex.rs  emergency_shutdown.rs  exchange.rs  honzon.rs  incentives.rs  ingester.rs  mintx.rs  mod.rs  nft.rs  prices.rs
runtime/shadows/tests/: integration_test.rs  weights_test.rs
runtime/src/: lib.rs  parachain.rs  standalone.rs
scripts/: README.md  _init_var.sh  build-alphanet-relay-image.sh  build-ombre-standalone.sh  build-only-wasm.sh  docker-hub-publish-dev.sh  docker-hub-publish-testnet.sh  docker-hub-publish.sh  generate-relay-specs.sh  init.sh  register-alphanet-parachain-local.sh  register-alphanet-parachain.sh  run-alphanet-parachain.sh  run-alphanet-relay.sh  run-ombre-standalone.sh  setup-offchain-max-iterations.sh  update-mandala.sh
scripts/github/: generate_release_text.rb  shadows_release.erb
service/: Cargo.toml
service/src/: client.rs  lib.rs
shadows-tests/: hardhat.config.ts  package-lock.json  package.json
shadows-tests/test/: test-balance.ts  test-bloom.ts  test-contract.ts  test-nonce.ts  test-pending-pool.ts  test-revert-reason.ts  util.ts
shadows-tests/todo/: test-precompiles.ts  test-subscription.ts
shadows-types-bundle/: index.ts  package-lock.json  package.json
specs/: OmbreAlphaV5-Relay.json  OmbreAlphaV5.json  README.md  ombre-alphanet-specs-template.json
src/: main.rs
template/node/: Cargo.toml
template/node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
template/runtime/: Cargo.toml  build.rs
template/runtime/src/: lib.rs
test-shadows/contracts/: ECRecoverTests.sol  ExplicitRevertReason.sol  (+1 more)
tests/: README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
(+183 files in other folders)
