[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    'pallets/*',
    'runtime',
]

[patch.crates-io]
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
frame-executive = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
frame-support-procedural = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
frame-support-procedural-tools = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
frame-support-procedural-tools-derive = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-authorship = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-aura = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-babe = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-bounties = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-collective = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-indices = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-im-online = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-membership = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-multisig = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-offences = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-proxy = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-recovery = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-scheduler = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-session = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-staking = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-sudo = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-tips = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-treasury = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
pallet-utility = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-block-builder = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-chain-spec = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-cli = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-client-db = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-informant = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-offchain = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-externalities = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-rpc = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-state-machine = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-session = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-staking = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-storage = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-tracing = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-trie = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-version = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech/substrate.git", branch="master", default-features=false }