[package]
name = "shadows-node"
version = "0.0.1"
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
jsonrpc-core = "15.0.0"
jsonrpc-pubsub = "15.0.0"

sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

pallet-evm = { path = "../frame/evm" }
pallet-ethereum = { path = "../frame/ethereum" }
fc-consensus = { path = "../client/consensus" }
fp-consensus = { path = "../primitives/consensus" }
fc-rpc = { path = "../client/rpc" }
fp-rpc = { path = "../primitives/rpc" }
fc-rpc-core = { path = "../client/rpc-core" }
fc-db = { path = "../client/db" }
fc-mapping-sync = { path = "../client/mapping-sync" }
shadows-runtime = { path = "../runtime", default-features = false, features = ["std"] }


[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '0.9.0'

[dependencies.sc-chain-spec]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '0.9.0'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '0.9.0'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '0.9.0'

[dependencies.sc-keystore]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '0.9.0'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '0.9.0'

[dependencies.sc-telemetry]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sc-tracing]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '0.9.0'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-timestamp]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-trie]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'


# Cumulus dependencies
[dependencies.cumulus-client-consensus-relay-chain]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'rococo-v1'

[dependencies.cumulus-client-collator]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'rococo-v1'

[dependencies.cumulus-client-network]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'rococo-v1'

[dependencies.cumulus-primitives-core]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'rococo-v1'

[dependencies.cumulus-client-service]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'rococo-v1'

# Polkadot dependencies
[dependencies.polkadot-primitives]
git = "https://github.com/paritytech/polkadot"
branch = 'rococo-v1'

[dependencies.polkadot-service]
git = "https://github.com/paritytech/polkadot"
branch = 'rococo-v1'

[dependencies.polkadot-cli]
git = "https://github.com/paritytech/polkadot"
branch = 'rococo-v1'

[dependencies.polkadot-test-service]
git = "https://github.com/paritytech/polkadot"
branch = 'rococo-v1'

[dependencies.polkadot-parachain]
git = "https://github.com/paritytech/polkadot"
branch = 'rococo-v1'


[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

[features]
default = []
aura = ["shadows-runtime/aura"]
manual-seal = ["shadows-runtime/manual-seal"]