[package]
name = "shadows-node"
version = "0.0.1"
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"

[dependencies]
derive_more = '0.15.0'
log = "0.4.13"
codec = { package = 'parity-scale-codec', version = '2.0.0' }
structopt = "0.3.8"
serde = { version = "1.0.119", features = ["derive"] }
hex-literal = "0.2.1"
# RPC related dependencies
jsonrpc-core = "15.1.0"
futures = "0.3.4"
jsonrpc-pubsub = "15.0.0"

sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

pallet-evm = { path = "../frame/evm" }
pallet-ethereum = { path = "../frame/ethereum" }
fc-consensus = { path = "../client/consensus" }
fp-consensus = { path = "../primitives/consensus" }
fc-rpc = { path = "../client/rpc" }
fp-rpc = { path = "../primitives/rpc" }
fc-rpc-core = { path = "../client/rpc-core" }
fc-db = { path = "../client/db" }
fc-mapping-sync = { path = "../client/mapping-sync" }

frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
frame-benchmarking-cli = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
shadows-runtime = { path = "../runtime", version = "0.0.1"}
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-chain-spec = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sc-cli = { features = ['wasmtime'], git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-client-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sc-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sc-executor = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sc-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sc-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sc-service = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sc-telemetry = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sc-tracing = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-trie = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }

cumulus-client-consensus-relay-chain =  { git = "https://github.com/paritytech/cumulus.git", branch = "rococo-v1"}
cumulus-client-collator = {git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
cumulus-client-network = {git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
cumulus-primitives-core = {git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }
cumulus-client-service = {git = 'https://github.com/paritytech/cumulus.git', branch = 'rococo-v1' }

polkadot-primitives = {git = "https://github.com/paritytech/polkadot", branch = 'rococo-v1'}
polkadot-service = {git = "https://github.com/paritytech/polkadot", branch = 'rococo-v1'}
polkadot-cli = {git = "https://github.com/paritytech/polkadot", branch = 'rococo-v1'}
polkadot-test-service = {git = "https://github.com/paritytech/polkadot", branch = 'rococo-v1'}

polkadot-parachain = {git = "https://github.com/paritytech/polkadot", branch = 'rococo-v1'}


[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }



[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = []
runtime-benchmarks = ['shadows-runtime/runtime-benchmarks']
aura = ["shadows-runtime/aura"]
manual-seal = ["shadows-runtime/manual-seal"]