[package]
name = "shadows-node"
version = "0.0.1"
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
jsonrpc-core = "15.0.0"
jsonrpc-pubsub = "15.0.0"
serde_json = "1.0.41"

sp-api = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sp-blockchain = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sc-rpc-api = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sc-rpc = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
substrate-frame-rpc-system = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
pallet-transaction-payment-rpc = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sc-cli = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sp-core = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sc-executor = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sc-service = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sp-inherents = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sc-transaction-pool = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sp-transaction-pool = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sc-network = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sc-consensus-aura = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sp-consensus-aura = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sc-consensus-manual-seal = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sp-consensus = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sc-consensus = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sp-timestamp = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sc-finality-grandpa = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sp-finality-grandpa = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sc-client-api = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sp-runtime = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sc-basic-authorship = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sp-block-builder = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sc-telemetry = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }

pallet-evm = { path = "../frame/evm" }
pallet-ethereum = { path = "../frame/ethereum" }
fc-consensus = { path = "../client/consensus" }
fp-consensus = { path = "../primitives/consensus" }
fc-rpc = { path = "../client/rpc" }
fp-rpc = { path = "../primitives/rpc" }
fc-rpc-core = { path = "../client/rpc-core" }
fc-db = { path = "../client/db" }
fc-mapping-sync = { path = "../client/mapping-sync" }
shadows-runtime = { path = "../runtime", default-features = false, features = ["std"] }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }

[features]
default = []
aura = ["shadows-runtime/aura"]
manual-seal = ["shadows-runtime/manual-seal"]
