[package]
name = "frontier-rpc"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0"

[dependencies]
jsonrpc-core = "14.0.3"
jsonrpc-derive = "14.0.3"
jsonrpc-core-client = "14.0.3"
ethereum-types = "0.9.0"
frontier-rpc-core = { path = "core" }
frontier-rpc-primitives = { path = "primitives" }
sp-runtime = {git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sp-api = {git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master"}
sp-consensus = {git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master"}
sp-transaction-pool = {git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master"}
sp-storage = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master"}
sc-service = {git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master"}
sc-client-api = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
ethereum = { version = "0.2", features = ["codec"] }
codec = { package = "parity-scale-codec", version = "1.0.0" }
rlp = "0.4"
pallet-ethereum = "0.1"
futures = { version = "0.3.1", features = ["compat"] }
sha3 = "0.8"
