[package]
name = "shadows-runtime"
version = "0.0.1"
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/ShadowsNetwork/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
frame-executive = { version = "3.0.0-dev", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }
frame-support = { version = "3.0.0-dev", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }
frame-system = { version = "3.0.0-dev", default-features = false, package = "frame-system", git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }
frame-system-rpc-runtime-api = { version = "3.0.0-dev", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }
pallet-aura = { version = "3.0.0-dev", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }
pallet-balances = { version = "3.0.0-dev", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }
pallet-grandpa = { version = "3.0.0-dev", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }
pallet-randomness-collective-flip = { version = "3.0.0-dev", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }
pallet-sudo = { version = "3.0.0-dev", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }
pallet-timestamp = { version = "3.0.0-dev", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }
pallet-transaction-payment = { version = "3.0.0-dev", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0-dev", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }
sp-api = { version = "3.0.0-dev", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }
sp-block-builder = { default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1"}
sp-consensus-aura = { version = "0.9.0-dev", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }
sp-core = { version = "3.0.0-dev", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }
sp-inherents = { default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1"}
sp-io = { version = "3.0.0-dev", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }
sp-offchain = { version = "3.0.0-dev", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }
sp-runtime = { version = "3.0.0-dev", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }
sp-session = { version = "3.0.0-dev", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }
sp-std = { version = "3.0.0-dev", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }
sp-transaction-pool = { version = "3.0.0-dev", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }
sp-version = { version = "3.0.0-dev", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }

fp-rpc = { default-features = false, path = "../primitives/rpc" }
pallet-ethereum = { version = "0.1.0", default-features = false, path = "../frame/ethereum" }
pallet-evm = { version = "3.0.0-dev", default-features = false, path = "../frame/evm" }
pallet-evm-precompile-simple = { version = "3.0.0-dev", default-features = false, path = "../frame/evm/precompile/simple" }
pallet-evm-precompile-sha3fips = { version = "3.0.0-dev", default-features = false, path = "../frame/evm/precompile/sha3fips" }

frame-benchmarking = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
frame-system-benchmarking = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1'}
hex-literal ='0.3.1'

# Cumulus dependencies
frame-benchmarking-cli = {git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sc-chain-spec = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }


[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/ShadowsNetwork/substrate.git", branch = "rococo-v1" }

[features]
default = ["std"]
aura = []
manual-seal = []
runtime-benchmarks = [
	'sp-runtime/runtime-benchmarks',
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'hex-literal',
	'frame-system/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
]
std = [
	"codec/std",
	"serde",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"fp-rpc/std",

	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]
